tests/baselines/reference/importDeferComments.errors.txt
b.ts(1,70): error TS2307: Cannot find module 'a' or its corresponding type declarations.


==== a.ts (0 errors) ====
    export {};
    
==== b.ts (1 errors) ====
    /*1*/ import /*2*/ defer /*3*/ * /*4*/ as /*5*/ aNs /*6*/ from /*7*/ "a" /*8*/;
                                                                         ~~~
!!! error TS2307: Cannot find module 'a' or its corresponding type declarations.
    